# FunctionGenerater

./: CMakeLists.txt  defs.h  display.cpp  display.h  functionGenerater.cpp  functionGenerater.h  main.cpp  main.h
lib/: tinyexpr.cpp  tinyexpr.h
